--- a/index.html
+++ b/index.html
@@ -5,3 +5,5 @@
 <h2>Suggestion 2:NTU</h2>
 <p>As an outsider of this university, I think students here are a bit ...different. </p>
 <a href:"https://www.google.com/maps/place/%E8%87%BA%E7%81%A3%E5%A4%A7%E5%AD%B8/@25.0173405,121.5397518,17z/data=!3m1!4b1!4m2!3m1!1s0x3442a989fe322ea9:0x21750404ee1d7f66?hl=zh-TW">a map of Nationa Taiwan University</a>
+</body>
+</html>
